public/stylesheets/stylesheet.css
/*Global Stuff*/
	@font-face {
	  font-family: 'Open Sans';
	  font-style: normal;
	  font-weight: 400;
	  src: local('Open Sans'), local('OpenSans'), url('http://themes.googleusercontent.com/static/fonts/opensans/v5/cJZKeOuBrn4kERxqtaUH3T8E0i7KZn-EPnyo3HZu7kw.woff') format('woff');
	}

	body {
		background-color: #eee;
		font-family: 'Open Sans', sans-serif;
		color: #333;
		margin-left: auto;
		margin-right: auto;
		max-width: 1240px;
		min-width: 640px;
		margin-top: 0em;
		margin-bottom: 0;
		padding: 0;
	}

	a { color: #436537 }
	a:link { text-decoration: none; }
	a:visited { text-decoration: none; }
	a:hover { text-decoration: underline; }
/*End Global Stuff*/

/*jQuery UI Widget Styles*/
	.ui-widget {
		font-size: 75% !important;
	}
/*End jQuery UI Widget Styles*/

/*Quick styles*/
	.center { margin-left: auto; margin-right: auto; text-align: center; }
	.lighter { color: #666666; }
	.smaller { font-size: 0.875em; }
	.block { display: block; }
	.vsm { font-size: 0.75em; }
	.bigger { font-size: 1.15em; }
	.left { text-align: left; }
	.indent { text-indent: 10px; }
	.doubleindent { text-indent: 20px; }
	.emindent { padding-left: 1em; }
	.clear { clear: both;}
	.cover { position:absolute; width:100%; height:100%; top:0; left: 0; z-index: 1; background-image: url('images/misc/empty.gif'); }
	.relative {position:relative; }
	.top { vertical-align:top; }
	.inline { display:inline; }
	.bgindent { background-color: #eee; padding: 0.5em; margin-top: 0.5em; margin-bottom: 0.5em;}
	.inlineblock  {display: inline-block;}
	.floatleft { float: left; }
	.hideoverflow {overflow: hidden; }
	.pointer { cursor: pointer; }
/*End Quick styles*/

/*Index page*/
	.featurebox {
		display:table;
		text-align:center;
		margin: 0.5em;
	}
	.featuretext {
		display:table-cell;
		vertical-align:middle;
		padding-left: 0.5em;
	}
/*End Index page*/

/*Header*/
	#header {
		background: #87A96B;
		color: #fff;
		margin: 0 auto;
		padding: 0em;
		text-align: left;
		border-bottom: #ddd 1px solid;
		font-size: 1.25em;
		position: relative;
	}
	#header .container {
		text-align: left;
		padding: 0.3em 0em;
		margin: 0 auto;
		display: inline-block;
	}

	#header .container #logo {
		font-weight: bold;
		float: left;
		margin: 0;
		padding: 0em 0em 0em 0em;
		padding-right: 0.5em;
	}
	#header .container ul {
		list-style: none;
		float: left;
		text-align: center;
		margin: 0;
		padding: 0;
	}
	#header .container ul li {
		margin: 0;
		padding: 0;
		display: inline-block;
	}
	#header a {
		text-decoration:none;
		color: #fff;
		padding: 0.3em 0.5em;
		text-align: center;
	}
	#header a:hover {
	background: #98BA7C;
		color: #fff;
	}
/*End Header*/

/*Search Panel*/
	.ui-helper-hidden-accessible { display: none; }

	#searchpanel {
		clear: both;
		font-size: 0.875em;
		border-bottom: #ddd 1px solid;
		background-color:  	#F0FFF0;
		color: #222;
		padding: 0.5em 2em;
		margin-left: auto;
		margin-right: auto;
		text-align: left;
	}
	#searchpanel input {
		font-size: 1.2em;
		border: 1px solid #ccc;
		color: #111;
	}
	.sort:link + .sort:visited { text-decoration: none; }
	.sort:hover { text-decoration: underline; }
	.sort:active + .sort:focus{ }
/*End Search Panel*/

/*Footer*/
	#footer {
		margin-left: auto;
		margin-right: auto;
		text-align: center;
		padding-top: 2em;
		padding-bottom: 2em;

		clear: both;
		font-size: 0.675em;
		color: #666;
	}
/*End Footer*/

/*Choice*/
	.choice {
		font-variant: small-caps;
		font-size: 1em;
		padding-top: 0.5em;
		margin-bottom: 1.5em;
	}
	.choice ul {
		clear: both;
		padding: 0;
		margin: 0;
		list-style: none;
		display: inline-block;
	}
	.choice ul li {
		padding: 0.1em;
		text-decoration: none;
		float: left;
		text-align: center;
	}
	.choice ul li div {
		padding-top: 0.2em;
		padding-bottom: 0.2em;
		padding-right: 0.6em;
		padding-left: 0.6em;
	}
	.otherchoice {
		border: 1px solid #aaa;
		color: #436537;
		background-color: #fff;
		text-decoration: none;
		border: 1px solid #aaa;
		text-align: center;
	}
	.otherchoice:link + .otherchoice:visited {
		text-decoration: none;
	}
	.otherchoice:hover {
		/*border: 1px solid #999999;*/
		border: 1px solid #436537;
		background-color: #436537;
		color: #fff;
		text-decoration: none;
	}
	.otherchoice:hover a {
		text-decoration: none;
		color: #eee;
	}
	.currentchoice {
		text-decoration: none;
		background-color: #e1e1e1;
		border: 1px solid #bbb;
		color: #888;
		text-align: center;
	}
/*End Choice*/


/*Section stuff*/
	.section {
		clear: both;
		margin-bottom: 1.5em;
	}
	.imgsection {
		clear: both;
		margin-bottom: 2.5em;
	}
/*End Section stuff*/

/*Links page stuff*/
	.paper {
		background-color: #fcfcfc;
		padding: 0.5em 2em 2em 2em;
		border: #ddd 1px solid;
	}
	#links blockquote {
		padding-top: 0;
		margin-top: 0;
	}
/*End Links page stuff*/


/*Parks Table*/
	#parkstable {
		padding: 0 1em;
		margin-bottom: 0.5em;
		margin-left: auto;
		margin-right: auto;
	}
	.placecell {
		width: 276px;
		height: 276px;
		display: inline-block;
		text-align: center;
		vertical-align: top;
		padding: 4px;
		margin: 4px;
		border: 1px solid #ebebec;
		overflow: hidden;
	}

	.placecell:hover {
		background-color: #fff;
		border: 1px solid #ddd;
	}

	.placecell img {
		width: 256px;
		height: 192px;
		padding: 0px;
		border: 1px solid #ccc;
	}
/*End Parks Table*/

/*Updates*/
	#updates {
		margin-left: auto;
		margin-right: auto;
		margin-top: 0;
		margin-bottom: 0;
		text-align: center;
		border-top: #ddd 1px solid;
		padding-bottom: 0.5em;
		clear: both;
		font-size: 0.75em;
		color: #666;
		background-color: #e0e0e0;
	}

	#updates p {
		padding-bottom: 0.5em;
		padding-top: 0em;
	}
/*End Updates*/


/*Info Panel*/
	#infopanel {
		font-size: 1em;
		padding-left: 0em;
		padding-right: 0em;
		padding-bottom: 0.5em;
		border-right: #ccc 1px solid;
		width: 284px;
		max-width: 25%;
		float: left;
	}
	#placetitle {
		font-size: 1.25em;
		font-weight: lighter;
		border: #ccc 1px solid;
		padding: 0.25em;
		margin-bottom: 0.5em;
		text-align: center;
		background-color: #f6f6f6;
		width: 90%;
	}
	#placetitle em {
		font-size: 0.75em;
	}


	/*Thumbnails*/
	#thumbs, #mapthumbs {
		list-style: none;
		margin-top: 0.25em;
		margin-bottom: 0em;
		padding: 0px;
	}
	#thumbs ul, #mapthumbs ul {
		padding: 0;
		margin: 0;
	}
	#thumbs li, #mapthumbs li {
		float: left;
		width: 50px;
		height: 48px;
		padding: 0;
		margin: 0;
	}
	#thumbs li img, #mapthumbs li img {
		width: auto;
		height: auto;
		max-width: 32px;
		max-height: 24px;
		border: #e0e0e0 1px solid;
		margin-left: auto;
		margin-right: auto;
		margin-bottom: 0;
		padding: 0;
		display: block;
		margin-top: 4px;
	}
	#thumbs li:hover img, #mapthumbs li:hover img {
		width: auto;
		height: auto;
		max-width: 48px;
		max-height: 36px;
		margin-top: 0;
	}
/*End Info Panel*/

/*Image Viewer*/
	#imageview {
		width: 70%;
		margin-left: auto;
		margin-right: auto;
		text-align: center;
		max-width: 1024px;
		display: inline-block;
	}

	#imageview div img {
		padding: 0px;
		max-width: 1024px;
		max-height: 768px;
		width: 100%;
		height: auto;
		border: #e0e0e0 1px solid;
		cursor: pointer;
	}
/*End Image Viewer*/

/*Labs-related stuff*/
	#labs input {
		width: 5em;
		border: 1px solid #999;
		padding: 0px !important;
		margin: 0px !important;
		height: 1.5em;
		background-color: #fff;
	}
	#labs select {
		border: 1px solid #999;
		padding: 0px !important;
		margin: 0px !important;
		height: 1.5em;
		width: 100%;
		background-color: #eee;
	}
	#labs .detailed {
		display: none;
	}
	#labs .centertable {
		display: inline-block;
		text-align: center;
		padding-left: auto;
		padding-right: auto;
	}
	#labs .smallinput {
		width: 1.5em;
		height: 1.5em;
		margin-right: 1px;
	}
	#labs .smalldropdown {
		height: 1.5em;
		width: 4em;
	}
	#labs table {
		border-collapse: collapse;
		text-align: left;
	}
	#labs table,th, td {
		border: 1px solid #ccc;
		padding: 1px !important;
		margin: 0px !important;
	}
	#labs .caption {
		font-size: 1.1em;
		height: 1.5em;
		text-decoration: underline;
	}
	#labs button {
		border: 1px solid #aaa;
		color: #436537;
		font-size: 1.1em;
		padding: 0.1em 0.8em;
		height: 1.8em;
		background-color: #eee;
	}
	#labs button:active {
		border: 1px solid #436537;
		background-color: #436537;
		color: #eee;
	}
/*End Labs-related stuff*/

